<resources>
    <string name="app_name">MediCall</string>
    <string name="sign_in">Login</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="medicall">MediCall</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="get_help">Get help</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_enter_name">Please enter your name</string>
    <string name="err_msg_enter_password">Please enter your password</string>
    <string name="err_msg_enter_reppassword">Please confirm your password</string>
    <string name="err_msg_password_mismatch">Passwords mismatch</string>
    <string name="login_successfull">You are logged in successfully</string>
    <string name="medical_info">Medical Info</string>
    <string name="or_sign_up">or Sign up</string>
    <string name="hint_blood_group">grupa krwi</string>
    <string name="hint_allergies">alergie</string>
    <string name="hint_chronic_diseases">choroby przewlekłe</string>
    <string name="save">Zapisz</string>
    <string name="hint_emergency_contacts">Osoba zaufana</string>
    <string name="hint_emergency_number">numer osoby zaufanej\n</string>
    <string name="back">Wróć</string>
    <string name="medimap">MediMap</string>
    <string name="chat">Chat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyC5Z67fK8A6gbswB6duwp8gbk0PahX5heg</string>
    <string name="select_category">Wybierz kategorie</string>
    <string name="author">Developed by Jan Nowak</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="save_contact">Save contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>